Updated service class unit tests and added test classes for AuthService, RoleService, UserDetailsServiceImpl and UserService