@@ -1,51 +1,62 @@
-/*
 package com.makibeans.service;
 
 import com.makibeans.dto.AttributeTemplateRequestDTO;
 import com.makibeans.dto.AttributeTemplateResponseDTO;
+import com.makibeans.dto.AttributeTemplateUpdateDTO;
 import com.makibeans.exceptions.DuplicateResourceException;
 import com.makibeans.exceptions.ResourceNotFoundException;
+import com.makibeans.mapper.AttributeTemplateMapper;
 import com.makibeans.model.AttributeTemplate;
+import com.makibeans.model.ProductAttribute;
 import com.makibeans.repository.AttributeTemplateRepository;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.util.ReflectionTestUtils;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
+
+/**
+ * Unit tests for the AttributeTemplateService class.
+ */
 
 @ExtendWith(MockitoExtension.class)
 class AttributeTemplateServiceTest {
 
-    private AttributeTemplateRequestDTO dto;
-
     @Mock
     private AttributeTemplateRepository attributeTemplateRepository;
+
+    @Mock
+    private AttributeTemplateMapper mapper;
+
+    @Mock
+    private ProductAttributeService productAttributeService;
 
     @InjectMocks
     private AttributeTemplateService attributeTemplateService;
 
+    private AttributeTemplateRequestDTO requestDTO;
+    private AttributeTemplateUpdateDTO updateDTO;
+
     @BeforeEach
     void setUp() {
-        dto = new AttributeTemplateRequestDTO();
-        dto.setName("  Origin  "); // Simulate untrimmed input
+        // Arrange
+        requestDTO = new AttributeTemplateRequestDTO();
+        requestDTO.setName("  Origin  ");
+
+        updateDTO = new AttributeTemplateUpdateDTO();
+        updateDTO.setName("  Origin  ");
     }
 
-    @AfterEach
-    void tearDown() {
-        dto = null;
-    }
+    // ========================================
+    // CREATE
+    // ========================================
 
     @Test
     void should_CreateAttributeTemplate_When_ValidNameProvided() {
@@ -53,17 +64,23 @@ class AttributeTemplateServiceTest {
         when(attributeTemplateRepository.existsByName("origin")).thenReturn(false);
         when(attributeTemplateRepository.save(any(AttributeTemplate.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
+        when(mapper.toResponseDTO(any())).thenAnswer(invocation -> {
+            AttributeTemplate at = invocation.getArgument(0);
+            return new AttributeTemplateResponseDTO(at.getId(), at.getName());
+        });
 
         // Act
-        AttributeTemplateResponseDTO result = attributeTemplateService.createAttributeTemplate(dto);
+        AttributeTemplateResponseDTO result = attributeTemplateService.createAttributeTemplate(requestDTO);
 
         // Assert
-        assertNotNull(result);
-        assertEquals("origin", result.getName(), "The attribute template name should be normalized");
+        assertNotNull(result, "Expected result to be not null");
+        assertEquals("origin", result.getName(), "Expected result name to be 'origin'");
 
         // Verify
-        verify(attributeTemplateRepository).existsByName(eq("origin"));
+        verify(attributeTemplateRepository).existsByName("origin");
         verify(attributeTemplateRepository).save(any(AttributeTemplate.class));
+        verify(mapper).toResponseDTO(any());
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
     }
 
     @Test
@@ -73,174 +90,262 @@ class AttributeTemplateServiceTest {
 
         // Act & Assert
         assertThrows(DuplicateResourceException.class,
-                () -> attributeTemplateService.createAttributeTemplate(dto),
-                "Expected exception when name already exists");
+                () -> attributeTemplateService.createAttributeTemplate(requestDTO),
+                "Expected exception: DuplicateResourceException");
 
-        verify(attributeTemplateRepository).existsByName(eq("origin"));
-        verifyNoMoreInteractions(attributeTemplateRepository);
+        // Verify
+        verify(attributeTemplateRepository).existsByName("origin");
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
     }
 
+    // ========================================
+    // DELETE
+    // ========================================
+
     @Test
-    void should_DeleteAttributeTemplate_When_ValidId() {
+    void should_DeleteAttributeTemplateAndAssociatedProductAttributes_When_IdExists() {
         // Arrange
-        when(attributeTemplateRepository.findById(eq(1L))).thenReturn(Optional.of(new AttributeTemplate("origin")));
+        AttributeTemplate template = new AttributeTemplate("origin");
+        ReflectionTestUtils.setField(template, "id", 1L);
+        ProductAttribute productAttribute = mock(ProductAttribute.class);
+
+        when(attributeTemplateRepository.findById(1L)).thenReturn(Optional.of(template));
+        when(productAttributeService.getProductAttributesByTemplateId(1L)).thenReturn(List.of(productAttribute));
+        when(productAttribute.getId()).thenReturn(99L);
 
         // Act
         attributeTemplateService.deleteAttributeTemplate(1L);
 
         // Verify
-        verify(attributeTemplateRepository).findById(eq(1L));
-        verify(attributeTemplateRepository).delete(any(AttributeTemplate.class));
+        verify(productAttributeService).getProductAttributesByTemplateId(1L);
+        verify(productAttributeService).deleteProductAttribute(99L);
+        verify(attributeTemplateRepository, times(2)).findById(1L);
+        verify(attributeTemplateRepository).delete(template);
+        verifyNoMoreInteractions(attributeTemplateRepository, productAttributeService, mapper);
     }
+
     @Test
-    void should_ThrowResourceNotFoundException_When_DeletingInvalidId() {
+    void should_DeleteOnlyAttributeTemplate_When_NoAssociatedProductAttributesExist() {
         // Arrange
-        when(attributeTemplateRepository.findById(eq(99L))).thenReturn(Optional.empty());
+        AttributeTemplate template = new AttributeTemplate("origin");
+        ReflectionTestUtils.setField(template, "id", 1L);
+
+        when(attributeTemplateRepository.findById(1L)).thenReturn(Optional.of(template));
+        when(productAttributeService.getProductAttributesByTemplateId(1L)).thenReturn(Collections.emptyList());
+
+        // Act
+        attributeTemplateService.deleteAttributeTemplate(1L);
+
+        // Verify
+        verify(productAttributeService).getProductAttributesByTemplateId(1L);
+        verify(productAttributeService, never()).deleteProductAttribute(any());
+        verify(attributeTemplateRepository, times(2)).findById(1L);
+        verify(attributeTemplateRepository).delete(template);
+        verifyNoMoreInteractions(attributeTemplateRepository, productAttributeService, mapper);
+    }
+
+    @Test
+    void should_ThrowResourceNotFoundException_When_DeleteWithInvalidId() {
+        // Arrange
+        when(attributeTemplateRepository.findById(99L)).thenReturn(Optional.empty());
 
         // Act & Assert
         assertThrows(ResourceNotFoundException.class,
-                () -> attributeTemplateService.deleteAttributeTemplate(99L));
+                () -> attributeTemplateService.deleteAttributeTemplate(99L),
+                "Expected exception: ResourceNotFoundException");
 
-        verify(attributeTemplateRepository).findById(eq(99L));
+        // Verify
+        verify(attributeTemplateRepository).findById(99L);
         verifyNoMoreInteractions(attributeTemplateRepository);
     }
 
+    // ========================================
+    // UPDATE
+    // ========================================
+
     @Test
-    void should_UpdateAttributeTemplate_When_ValidNameProvided() {
+    void should_UpdateAttributeTemplate_When_NameChanges() {
         // Arrange
-        AttributeTemplate existingTemplate = new AttributeTemplate("flavor");
-        when(attributeTemplateRepository.findById(eq(1L))).thenReturn(Optional.of(existingTemplate));
+        AttributeTemplate template = new AttributeTemplate("flavor");
+
+        when(attributeTemplateRepository.findById(1L)).thenReturn(Optional.of(template));
         when(attributeTemplateRepository.existsByName("origin")).thenReturn(false);
         when(attributeTemplateRepository.save(any(AttributeTemplate.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
-
-        // Capturing argument
-        ArgumentCaptor<AttributeTemplate> captor = ArgumentCaptor.forClass(AttributeTemplate.class);
+        when(mapper.toResponseDTO(any())).thenAnswer(invocation -> {
+            AttributeTemplate at = invocation.getArgument(0);
+            return new AttributeTemplateResponseDTO(at.getId(), at.getName());
+        });
 
         // Act
-        AttributeTemplateResponseDTO result = attributeTemplateService.updateAttributeTemplate(1L, dto);
+        AttributeTemplateResponseDTO result = attributeTemplateService.updateAttributeTemplate(1L, updateDTO);
 
         // Assert
-        assertNotNull(result);
-        assertEquals("origin", result.getName());
+        assertNotNull(result, "Expected result to be not null");
+        assertEquals("origin", result.getName(), "Expected result name to be 'origin'");
 
         // Verify
-        verify(attributeTemplateRepository).findById(eq(1L));
-        verify(attributeTemplateRepository).existsByName(eq("origin"));
-        verify(attributeTemplateRepository).save(captor.capture());
-
-        // Ensure name normalization
-        AttributeTemplate captured = captor.getValue();
-        assertEquals("origin", captured.getName());
+        verify(attributeTemplateRepository).findById(1L);
+        verify(attributeTemplateRepository).existsByName("origin");
+        verify(attributeTemplateRepository).save(any(AttributeTemplate.class));
+        verify(mapper).toResponseDTO(any());
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
     }
 
     @Test
-    void should_ThrowResourceNotFoundException_When_UpdatingNonExistentId() {
+    void should_NotUpdateAttributeTemplate_When_NameIsUnchanged() {
         // Arrange
-        when(attributeTemplateRepository.findById(eq(99L))).thenReturn(Optional.empty());
+        AttributeTemplate template = new AttributeTemplate("origin");
 
-        // Act & Assert
-        assertThrows(ResourceNotFoundException.class,
-                () -> attributeTemplateService.updateAttributeTemplate(99L, dto));
-
-        verify(attributeTemplateRepository).findById(eq(99L));
-        verifyNoMoreInteractions(attributeTemplateRepository);
-    }
-
-    @Test
-    void should_FindById_When_ValidIdExists() {
-        // Arrange
-        when(attributeTemplateRepository.findById(eq(1L)))
-                .thenReturn(Optional.of(new AttributeTemplate("Origin")));
+        when(attributeTemplateRepository.findById(1L)).thenReturn(Optional.of(template));
+        when(mapper.toResponseDTO(template)).thenReturn(new AttributeTemplateResponseDTO(null, "origin"));
 
         // Act
-        AttributeTemplate result = attributeTemplateService.findById(1L);
+        AttributeTemplateResponseDTO result = attributeTemplateService.updateAttributeTemplate(1L, updateDTO);
 
         // Assert
-        assertNotNull(result);
-        assertEquals("Origin", result.getName());
+        assertNotNull(result, "Expected result to be not null");
+        assertEquals("origin", result.getName(), "Expected name to remain unchanged");
 
-        verify(attributeTemplateRepository).findById(eq(1L));
+        // Verify
+        verify(attributeTemplateRepository).findById(1L);
+        verify(mapper).toResponseDTO(template);
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
     }
 
     @Test
-    void should_ThrowResourceNotFoundException_When_FindingByNonExistentId() {
+    void should_ThrowDuplicateResourceException_When_UpdatingWithExistingName() {
         // Arrange
-        when(attributeTemplateRepository.findById(eq(99L))).thenReturn(Optional.empty());
+        AttributeTemplate template = new AttributeTemplate("flavor");
+
+        when(attributeTemplateRepository.findById(1L)).thenReturn(Optional.of(template));
+        when(attributeTemplateRepository.existsByName("origin")).thenReturn(true);
+
+        // Act & Assert
+        assertThrows(DuplicateResourceException.class,
+                () -> attributeTemplateService.updateAttributeTemplate(1L, updateDTO),
+                "Expected exception: DuplicateResourceException");
+
+        // Verify
+        verify(attributeTemplateRepository).findById(1L);
+        verify(attributeTemplateRepository).existsByName("origin");
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
+    }
+
+    @Test
+    void should_ThrowResourceNotFoundException_When_UpdateWithInvalidId() {
+        // Arrange
+        when(attributeTemplateRepository.findById(99L)).thenReturn(Optional.empty());
 
         // Act & Assert
         assertThrows(ResourceNotFoundException.class,
-                () -> attributeTemplateService.findById(99L));
+                () -> attributeTemplateService.updateAttributeTemplate(99L, updateDTO),
+                "Expected exception: ResourceNotFoundException");
 
-        verify(attributeTemplateRepository).findById(eq(99L));
-        verifyNoMoreInteractions(attributeTemplateRepository);
+        // Verify
+        verify(attributeTemplateRepository).findById(99L);
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
     }
 
+    // ========================================
+    // GET BY ID
+    // ========================================
+
     @Test
-    void should_ReturnAttributeTemplateResponseDTO_When_ValidIdProvided() {
+    void should_ReturnDTO_When_IdExists() {
         // Arrange
-        AttributeTemplate attributeTemplate = new AttributeTemplate("origin");
-        when(attributeTemplateRepository.findById(1L)).thenReturn(Optional.of(attributeTemplate));
+        AttributeTemplate template = new AttributeTemplate("origin");
+
+        when(attributeTemplateRepository.findById(1L)).thenReturn(Optional.of(template));
+        when(mapper.toResponseDTO(template)).thenReturn(new AttributeTemplateResponseDTO(null, "origin"));
 
         // Act
         AttributeTemplateResponseDTO result = attributeTemplateService.getAttributeTemplateById(1L);
 
         // Assert
-        assertNotNull(result);
-        assertEquals("origin", result.getName());
+        assertNotNull(result, "Expected result to be not null");
+        assertEquals("origin", result.getName(), "Expected result name to be 'origin'");
 
         // Verify
         verify(attributeTemplateRepository).findById(1L);
+        verify(mapper).toResponseDTO(template);
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
     }
 
     @Test
-    void should_ThrowResourceNotFoundException_When_InvalidIdProvided() {
+    void should_ThrowResourceNotFoundException_When_GetByInvalidId() {
         // Arrange
         when(attributeTemplateRepository.findById(99L)).thenReturn(Optional.empty());
 
         // Act & Assert
-        assertThrows(ResourceNotFoundException.class, () -> attributeTemplateService.getAttributeTemplateById(99L));
+        assertThrows(ResourceNotFoundException.class,
+                () -> attributeTemplateService.getAttributeTemplateById(99L),
+                "Expected exception: ResourceNotFoundException");
 
         // Verify
         verify(attributeTemplateRepository).findById(99L);
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
     }
 
+    // ========================================
+    // VALID KEYS / CACHING
+    // ========================================
+
     @Test
-    void should_ReturnListOfAttributeTemplateResponseDTOs_When_AttributeTemplatesExist() {
+    void should_ReturnValidAttributeKeys_When_AttributeTemplatesExist() {
         // Arrange
-        List<AttributeTemplate> templates = Arrays.asList(
-                new AttributeTemplate("origin"),
-                new AttributeTemplate("size")
-        );
+        List<AttributeTemplate> templates = List.of(
+                new AttributeTemplate("Origin"),
+                new AttributeTemplate("Size"));
+
         when(attributeTemplateRepository.findAll()).thenReturn(templates);
 
         // Act
-        List<AttributeTemplateResponseDTO> result = attributeTemplateService.getAllAttributeTemplates();
+        Set<String> result = attributeTemplateService.getValidAttributeKeys();
 
         // Assert
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals("origin", result.get(0).getName());
-        assertEquals("size", result.get(1).getName());
+        assertEquals(Set.of("origin", "size"), result, "Expected keys to be normalized and unique");
 
         // Verify
         verify(attributeTemplateRepository).findAll();
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper, productAttributeService);
     }
 
     @Test
-    void should_ReturnEmptyList_When_NoAttributeTemplatesExist() {
+    void should_RefreshCacheWithoutError() {
+        // Act & Assert
+        assertDoesNotThrow(() -> attributeTemplateService.refreshAttributeCache(),
+                "Expected no exception to be thrown");
+
+        // Verify
+        verifyNoInteractions(attributeTemplateRepository, mapper, productAttributeService);
+    }
+
+    // ========================================
+    // FILTER
+    // ========================================
+
+    @Test
+    void should_FilterTemplates_ByName() {
         // Arrange
-        when(attributeTemplateRepository.findAll()).thenReturn(Collections.emptyList());
+        Map<String, String> params = Map.of("name", "flavor");
+        AttributeTemplate template = new AttributeTemplate("Flavor");
+        AttributeTemplateResponseDTO expectedDTO = new AttributeTemplateResponseDTO(1L, "Flavor");
+
+        when(attributeTemplateRepository.findAll()).thenReturn(List.of(template));
+        when(mapper.toResponseDTO(template)).thenReturn(expectedDTO);
 
         // Act
-        List<AttributeTemplateResponseDTO> result = attributeTemplateService.getAllAttributeTemplates();
+        List<AttributeTemplateResponseDTO> result = attributeTemplateService.findBySearchQuery(params);
 
         // Assert
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
+        assertNotNull(result, "Result list should not be null");
+        assertEquals(1, result.size(), "Expected exactly one result matching 'flavor'");
+        assertEquals(expectedDTO, result.get(0), "Returned DTO should match expected template DTO");
 
         // Verify
         verify(attributeTemplateRepository).findAll();
+        verify(mapper).toResponseDTO(template);
+        verifyNoMoreInteractions(attributeTemplateRepository, mapper);
     }
 }
-*/
